fix empty all-visible-deck

--- a/bga-cards.css
+++ b/bga-cards.css
@@ -174,7 +174,6 @@ body > .card {
   width: calc(var(--width) + (var(--tile-count) - 1) * var(--horizontal-shift));
   height: calc(var(--height) + (var(--tile-count) - 1) * var(--vertical-shift));
   transition: width 0.5s ease-in-out, height 0.5s ease-in-out, background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-  opacity: var(--tile-count);
 }
 .card-stock.all-visible-deck > .card {
   position: absolute;
