--- a/src/stocks/all-visible-deck.scss
+++ b/src/stocks/all-visible-deck.scss
@@ -5,7 +5,6 @@
         width: calc(var(--width) + (var(--tile-count) - 1) * var(--horizontal-shift));
         height: calc(var(--height) + (var(--tile-count) - 1) * var(--vertical-shift));
         transition: width 0.5s ease-in-out, height 0.5s ease-in-out, background-color 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-        opacity: var(--tile-count);
 
         & > .card {
             position: absolute;
